[package]
name = "birthdays"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.42"
chrono-tz = "0.10.4"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["fs"] }
